--- a/style.css
+++ b/style.css
@@ -30,6 +30,17 @@ body {
     color: black
   }
   
+  .valid {
+    color: black;
+    border-color: green;
+    background-color: greenyellow;
+  }
+  .invalid {
+    color: black;
+    border-color: red;
+    background-color: rgb(230, 53, 8);
+  }
+  
   .screen1 {
     display: flex;
     flex-direction: column;
@@ -40,8 +51,24 @@ body {
     transition: margin 0.5s ease-out;
   }
   
+  .up {
+    margin-top: -100vh;
+  }
+  
   input{
     padding: 8px;
     font-size: 1rem;
   }
   
+  button{
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    border-style: solid;
+    background-color: cornsilk;
+    font-size: 1.5rem;
+  }
+  
+  .screen1 p{
+    font-size: 2rem;
+  }
